--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <title>Sean Bush</title>
+        <link rel="stylesheet" href="style.css" >
     </head>
     <body>
-        <h1>Sean Bush</h1>
-        <h2>Sample webpage</h2>
+        <main>
+            <h1>Sean Bush</h1>
+            <h2>Sample webpage</h2>
+        </main>
     </body>
 </html>
