--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <title>Sean Bush</title>
-        <link rel="stylesheet" href="style.css" >
+        <meta charset="utf-8">
+        <link rel="icon" href="favicon.ico" type="image/png">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <main>
