Create header for homepage

--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
         <meta charset="utf-8">
         <link rel="icon" href="favicon.ico" type="image/png">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     </head>
     <body>
+
+        <header>
+            <nav>
+                <a id="nav-home" href="">Sean Bush</a>
+            </nav>
+            <nav id="nav-bar">
+                <a id="nav-about" href="">About</a>
+                <a id="nav-blog" href="">Blog</a>
+                <a id="nav-portfolio" href="">Portfolio</a>
+                <a id="nav-resume" href="">Resume</a>
+                <a id="nav-contact" href="">Contact</a>
+            </nav>
+        </header>
+
         <main>
-            <h1>Sean Bush</h1>
-            <h2>Sample webpage</h2>
+
         </main>
+
+        <footer>
+
+        </footer>
+
     </body>
 </html>
