Revise header styling

--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
                 <a id="nav-resume" href="">Resume</a>
                 <a id="nav-contact" href="">Contact</a>
             </nav>
+            <div class="dummy"></div>
         </header>
 
         <main>
+
+            <div id="header-padding"></div>
+
+            Sample text
 
         </main>
 
