Improve header responsiveness
When on narrow screens, replace nav buttons on header with a dropdown menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+        <script src="script.js" async></script>
     </head>
     <body>
 
@@ -22,7 +23,16 @@
                 <a id="nav-resume" href="">Resume</a>
                 <a id="nav-contact" href="">Contact</a>
             </nav>
-            <div class="dummy"></div>
+            <div class="button-container">
+                <button id="nav-menu-toggle">≡</button>
+            </div>
+            <menu id="nav-menu">
+                <li><a>About</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Portfolio</a></li>
+                <li><a>Resume</a></li>
+                <li><a>Contact</a></li>
+            </menu>
         </header>
 
         <main>
