Refactor by moving homepage to directory and redirecting from root/index.html

--- a/index.html
+++ b/index.html
@@ -1,52 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <title>Sean Bush</title>
-        <meta charset="utf-8">
-        <link rel="icon" href="favicon.ico" type="image/png">
-        <link rel="stylesheet" href="pages/homepage/style/style.css">
-        <link rel="stylesheet" href="pages/homepage/style/style_header.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-        <script src="pages/homepage/scripts/script_header.js" async></script>
+        <meta http-equiv="Refresh" content="0; url='/pages/homepage'" />
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-
-        <header id="page-header">
-            <nav>
-                <a id="nav-home" href="">Sean Bush</a>
-            </nav>
-            <nav id="nav-bar">
-                <a href="">About</a>
-                <a href="">Blog</a>
-                <a href="">Portfolio</a>
-                <a href="">Resume</a>
-                <a href="">Contact</a>
-            </nav>
-            <div id="button-container">
-                <button id="nav-menu-toggle">≡</button>
-            </div>
-            <menu id="nav-menu" class="hide">
-                <li><a>About</a></li>
-                <li><a>Blog</a></li>
-                <li><a>Portfolio</a></li>
-                <li><a>Resume</a></li>
-                <li><a>Contact</a></li>
-            </menu>
-        </header>
-
-        <div class="dummy-header"></div>
-
-        <main>
-
-            Sample text
-
-        </main>
-
-        <footer>
-
-        </footer>
-
-    </body>
 </html>
